[ZBX-18892] fixed preprocessing steps wrapping

--- a/frontends/php/assets/styles/hc-dark.css
+++ b/frontends/php/assets/styles/hc-dark.css
@@ -214,7 +214,7 @@ pre {
   font-family: "Courier New", Courier, monospace;
 }
 
-.overlay-dialogue.modal .overlay-dialogue-body .table-forms .table-forms-td-right, pre, pre a, pre td, pre span {
+pre, pre a, pre td, pre span {
   white-space: pre-wrap;
   word-break: break-all;
   word-break: break-word;
@@ -6580,10 +6580,10 @@ svg {
   line-height: 24px;
 }
 
-table.preprocessing-test-results td {
+.preprocessing-test-results td {
   vertical-align: top !important;
 }
-table.preprocessing-test-results .rel-container {
+.preprocessing-test-results .rel-container {
   top: 4px;
   margin-left: 3px;
 }
